# geomatch

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md
code/: edgecases.txt  pyproject.toml
code/src/geomatch/: cli.py  geomatch.py  haversine.py  mongo.py  parallel.py  plot.py
code/tests/: cities.json  distances.json  test_haversine.py  test_mongo.py
