[project]
name = "geomatch"
version = "0.1.0"
description = "Matching two satellites up in space."
dependencies = [
    "shapely>=2.0.1",
    "geopandas>=0.13.2",
    "pymongo==3.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
]
[tool.hatch.metadata]
allow-direct-references = true
