[project]
name = "geomatch"
version = "0.2.1"
description = "Matching two satellites up in space."
dependencies = [
    "shapely>=2.0.1",
    "geopandas>=0.13.2",
    "pymongo==3.13.0",
    "icc_rt>=2020.0.133",
    "numba>=0.57.1",
    "folium>=0.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
geomatch = "geomatch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "pytest-cov>=4.1.0",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
geomatch = {call = "geomatch.cli:main"}
lint = {chain = ["lint:black", "lint:flake8", "lint:isort"]}
"lint:black" = "black --check src/ tests/"
"lint:flake8" = "flake8 --ignore E501 src/ tests/"
"lint:isort" = "isort --check src/ tests/"
"fix:black" = "black src/ tests/"
"fix:isort" = "isort src/ tests/"
test = "pytest tests/"
test-cov = {cmd = "pytest --cov=src/ --cov-report=term-missing --no-cov-on-fail", env = { NUMBA_DISABLE_JIT = 1}}
